[gd_scene load_steps=5 format=3 uid="uid://bvrww2wgo8w5t"]

[ext_resource type="Script" path="res://modules/control_manager/player_control_manager.gd" id="1_7r8n7"]
[ext_resource type="Script" path="res://modules/control_manager/xr_signalers/WebXRConfigurer.gd" id="2_im1ia"]
[ext_resource type="Script" path="res://modules/control_manager/xr_signalers/OpenXRConfigurer.gd" id="3_oaw4t"]

[sub_resource type="Theme" id="Theme_3cenb"]

[node name="PlayerControlManager" type="Node"]
script = ExtResource("1_7r8n7")

[node name="WebXRAvailabilitySignaler" type="Node" parent="."]
script = ExtResource("2_im1ia")

[node name="OpenXRAvailabilitySignaler" type="Node" parent="."]
script = ExtResource("3_oaw4t")

[node name="PlayerControlUI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="PlayerControlUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerControlUI/Panel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3

[node name="XR_Button" type="Button" parent="PlayerControlUI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_3cenb")
text = "XR Disabled"

[node name="FPS_Button" type="Button" parent="PlayerControlUI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_3cenb")
text = "FPS Mode"

[node name="TPS_Button" type="Button" parent="PlayerControlUI/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_3cenb")
text = "TPS Mode"

[connection signal="webXRAvailability" from="WebXRAvailabilitySignaler" to="." method="_on_web_xr_availability" flags=6]
[connection signal="openXRAvailability" from="OpenXRAvailabilitySignaler" to="." method="_on_open_xr_availability" flags=6]
[connection signal="pressed" from="PlayerControlUI/Panel/HBoxContainer/XR_Button" to="." method="_on_xr_button_pressed"]
[connection signal="pressed" from="PlayerControlUI/Panel/HBoxContainer/FPS_Button" to="." method="_on_fps_button_pressed"]
[connection signal="pressed" from="PlayerControlUI/Panel/HBoxContainer/TPS_Button" to="." method="_on_tps_button_pressed"]
